Update JDK requirement to 17+, improve GraalVM support, and enhance documentation and scripts
Signed-off-by: Özkan Pakdil <ozkan.pakdil@gmail.com>